add about and testimonial section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 
     <!----------Navbar start--------- -->
+
      <header id="full-nav">
         <div class="header">
             <div class="container">
@@ -57,9 +58,11 @@
             </div>
         </div>
      </header>    
+
      <!--Navbar Section Exit-->
 
      <!--Banner Section Start-->
+
        <section class="banner-section">
           <div class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -93,8 +96,8 @@
             </div>
           </div>
        </section>
-     <!--Banner Section Exit-->
 
+     <!--Banner Section Exit-->
 
      <!--Features Section start-->
 
@@ -184,25 +187,173 @@
         </div>
       </section>
 
-
-
-
-
-
-
-
-
-
-
-
      <!--About Section exit-->
 
+ <!--Product Section start-->
+
+ <section class="landing-product-section">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="clo-12 text-center pb-5">
+          <h2 class="section-title">Our Best Seller Product</h2>
+          <p class="section-subtitle">
+            Discover the charm and craftsmanship of our best-selling product,
+             beloved for its quality and timeless appeal. Perfect for sparking joy and 
+             creativity in children of all ages</p>
+        </div>
+      </div>
+      <div class="row mx-0">
+        <div class="col-lg-3 col-sm-6 mb-5" >
+          <div class=" card product-card">
+            <div class="product-img">
+              <img src="./images/products/Gudiya.webp"  class="img-fluid">
+            </div>
+            <div class="d-flex align-item-center justify-content-between">
+              <h3>Gudiya</h3>
+              <span>330</span>
+            </div>
+            <div class="product-detail">
+              <a href="product.html" class="btn main-btn">View Products</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-5" >
+          <div class=" card product-card">
+            <div class="product-img">
+              <img src="./images/products/horse.jpg"  class="img-fluid">
+            </div>
+            <div class="d-flex align-item-center justify-content-between">
+              <h3>Horse</h3>
+              <span>669</span>
+            </div>
+            <div class="product-detail">
+              <a href="product.html" class="btn main-btn">View Products</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-5" >
+          <div class=" card product-card">
+            <div class="product-img">
+              <img src="./images/products/ring-tower.webp"  class="img-fluid">
+            </div>
+            <div class="d-flex align-item-center justify-content-between">
+              <h3>Ring-tower</h3>
+              <span>250</span>
+            </div>
+            <div class="product-detail">
+              <a href="product.html" class="btn main-btn">View Products</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-5" >
+          <div class=" card product-card">
+            <div class="product-img">
+              <img src="./images/products/train.png"  class="img-fluid">
+            </div>
+            <div class="d-flex align-item-center justify-content-between">
+              <h3>Train</h3>
+              <span>400</span>
+            </div>
+            <div class="product-detail">
+              <a href="product.html" class="btn main-btn">View Products</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</section>
+
+<!--Product Section exit-->
+
+  <!--Testimonial Section start-->
+
+  <section class="--Testimonial-section">
+    <div class="container">
+      <div class="row pb-5">
+         <div class="col-12 text-center">
+          <h2 class="section-title">Our Satisfied Customer</h2>
+          <p class="section-subtitle">The Passage Experienced A Surge In Popularity During The 1960s When
+            Again During The 90s As Desktop Publisher</p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-xl-8 col-md-10">
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="d-sm-flex row">
+                  <div class="profile-box col-sm-5">
+                    <img src="./images/testimonial/author2.jpg" alt="">
+                  </div>
+                  <div class="card col-sm-7">
+                    <div class="desc-box">
+                     <p class="fst-italic">Not only was customer support
+                      very fast, but the design is very professinal.
+                       Will devenitily be looking for new products in the 
+                       future from this author </p>
+                     <div class="my-4">
+                      <h4>Divya Prakash</h4>
+                      <p class="m-0 text-white">Happy Customer</p>
+                     </div>
+                        <img src="./images/testimonial/qoutes.svg" class="float-end">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item ">
+                <div class="d-sm-flex row">
+                  <div class="profile-box col-sm-5">
+                    <img src="./images/testimonial/author2.jpg" alt="">
+                  </div>
+                  <div class="card col-sm-7">
+                    <div class="desc-box">
+                     <p class="fst-italic">Not only was customer support
+                      very fast, but the design is very professinal.
+                       Will devenitily be looking for new products in the 
+                       future from this author </p>
+                     <div class="my-4">
+                      <h4>Divya Prakash</h4>
+                      <p class="m-0 text-white">Happy Customer</p>
+                     </div>
+                        <img src="./images/testimonial/qoutes.svg" class="float-end">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
 
 
 
+
+
+
+
+
+
+  <!--Testimonial Section exit-->
+  
 
  <!----------Bootstrap js--------- -->
 
