add css to testimonial

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
   <!--Testimonial Section start-->
 
-  <section class="--Testimonial-section">
+  <section class="Testimonial-section">
     <div class="container">
       <div class="row pb-5">
          <div class="col-12 text-center">
@@ -327,33 +327,50 @@
                 </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-
-
-
-
-
-
-
-
-
-
-
   <!--Testimonial Section exit-->
   
+   <!--Gallery Section start-->
+
+   <section class="gallery-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center pb-5">
+          <h2 class="section-title">Our Gallery</h2>
+          <p class="section-subtitle">
+            Unveil the magic of our top-selling wooden masterpiece, crafted with precision and
+             care to captivate hearts and minds alike. Embrace the tradition of playfulness and
+              imagination with this cherished favorite, cherished by families for its enduring 
+              quality and enchanting design.</p>
+          
+        </div>
+        <div class="col-sm-6 col-lg-4 mb-4">
+          <a href="images/gallery/g-1.jpg" data-lightbox="images" data-title="toys">
+            <img src="images/gallery/g-1.jpg" class="img-fluid rounded-3">
+          </a>
+         
+        </div>
+      </div>
+    </div>
+   </section>
+
+
+
+
+
+
+
+
+
+
+    <!--Gallery Section exit-->
+
+
 
  <!----------Bootstrap js--------- -->
 
