--- a/product.html
+++ b/product.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Woody Wonders</title>
 <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
@@ -19,7 +14,11 @@
  <!----------CSS--------- -->
  <link rel="stylesheet" href="css/style.css">
  <link rel="stylesheet" href="css/responsive.css">
-<body>
+    
+</head>
+
+
+<body class="product">
 
 
     <!----------Navbar start--------- -->
@@ -80,7 +79,7 @@
 
     <!----product section start -->
 
-    <section class="product">
+    <section class="product-section">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 text-center pb-5">
