add contavt page css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                       <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
@@ -71,8 +71,8 @@
                   <div class="carousel-caption">
                     <div class="banner-content">
                       <h1>100% Natural</h1>
-                      <h3>Safe and non chemical coloring </h3>
-                      <p>Welcome to our world of timeless wooden toys! Explore creativity, embrace sustainability, and ignite imagination with our carefully crafted playthings.Let the adventure begin</p>
+                       <h3>Safe and non chemical coloring </h3>
+                      <p>Welcome to our world of timeless wooden toys! Explore creativity, embrace sustainability, and ignite imagination with our carefully crafted playthings.Let the adventure begin</p> 
                       <a href="product.html" class="btn main-btn">ALL Products</a>
                     </div>
                   </div>
