--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
                       <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#">Home</a>
+                        <a class="nav-link " aria-current="page" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -77,6 +77,64 @@
 
 
 <!-- contact section start-->
+
+   <section class="contact-section">
+    <div class="container">
+      <div class="row justify-content-center">
+            <div class="col-12 text-center pb-5">
+              <h2 class="section-title">Get In Touch</h2>
+              <p class="section-subtitle">Have questions or want to learn more 
+                about our wooden wonders? Reach out to us we'd love to hear from 
+                you and help in any way we can!</p>
+            </div>
+            <div class="col-12 contact-form">
+              <div class="row">
+                <div class="col-lg-7 mb-5">
+                  <div class="row g-3">
+                    <div class="col-md-6 mb-4">
+                      <input type="text" class=form-control placeholder="Your Name *" required>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                      <input type="number" class=form-control placeholder="Your Number * " required>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                      <input type="text" class=form-control placeholder="Your Address *" required>
+                    </div>
+                    <div class="col-12 mb-4">
+                      <textarea class="form-control" placeholder="Your Message...."></textarea>
+                    </div>
+                    <div class="col-12 mb-4">
+                      <button type="submit" class="btn main-btn" >Send Message</button>
+                    </div>
+                  </div>
+                </div>
+                    <div class="col-lg-5 mb-5">
+                      <div class="content-box ms-sm-5">
+                        <ul class="info-box clearfix">
+                          <li>
+                            <ion-icon name="call"></ion-icon>
+                            <p>Any Question? Call us</p>
+                            <div>
+                              <a href="#">+91 123 456 1234</a>
+                            </div>
+                          </li>
+                          <li>
+                            <ion-icon name="mail"></ion-icon>
+                            <p>Any Question? Email us</p>
+                            <div>
+                              <a href="#">woodywonders@gamil.com</a>
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+              </div>
+            </div>
+      </div>
+    </div>
+   </section>
+   
+
 
 <!-- contact section end-->
 
